# AudioPlc

./: 48.pcm  CMakeLists.txt  Makefile  README.md  copy.pcm  mute.pcm  plc.pcm  test_copy.cc  test_mute.cc  test_noise.cc  test_plc.cc
base/: audio_decoder.h  audio_frame.cc  audio_frame.h  buffer.h  channel_layout.cc  checks.h  safe_compare.h  time_utils.cc  time_utils.h  zero_memory.h
common_audio/signal_processing/: auto_correlation.c  complex_fft.c  division_operations.c  dot_product_with_scale.cc  downsample_fast.c  filter_ar.c  filter_ar_fast_q12.c  filter_ma_fast_q12.c  levinson_durbin.c  min_max_operations.c  resample_by_2_internal.c  spl_sqrt.c  splitting_filter.c
common_audio/signal_processing/include/: spl_inl.h
common_audio/vad/: vad_core.c  vad_filterbank.c  vad_sp.c
neteq/: Makefile  audio_multi_vector.cc  audio_multi_vector.h  audio_vector.cc  audio_vector.h  background_noise.cc  background_noise.h  cross_correlation.cc  dsp_helper.cc  dsp_helper.h  expand.cc  expand.h  merge.cc  merge.h  post_decode_vad.cc  post_decode_vad.h  random_vector.cc  random_vector.h  sync_buffer.cc  sync_buffer.h
